fixing load screen so that it covers all tiers

--- a/css/loading.css
+++ b/css/loading.css
@@ -6,7 +6,7 @@
 	background-position: top left, 0px 800px;
 	background-repeat: repeat-x, repeat-x;
 	width: 100%;
-	height: 100%;
+	height: 3000px;
 	position: absolute;
 	z-index: 999;
 }
